--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,77 @@
-Click==7.0
-dash==1.4.0
-dash-core-components==1.3.0
-dash-html-components==1.0.1
-dash-renderer==1.1.1
-dash-table==4.4.0
-Flask==1.1.1
-Flask-Compress==1.4.0
-future==0.17.1
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-numpy==1.17.2
-pandas==0.25.1
-plotly==4.1.1
-python-dateutil==2.8.0
-pytz==2019.3
-retrying==1.3.3
-six==1.12.0
-Werkzeug==0.16.0
+ansi2html==1.8.0
+asttokens==2.4.0
+attrs==23.1.0
+backcall==0.2.0
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+comm==0.1.4
+contourpy==1.1.1
+cycler==0.12.1
+dash==2.14.0
+dash-bootstrap-components==1.5.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.8.0
+decorator==5.1.1
+executing==2.0.0
+fiona==1.9.5
+Flask==2.2.5
+fonttools==4.43.1
+geopandas==0.14.0
+idna==3.4
+importlib-metadata==6.8.0
+ipykernel==6.25.2
+ipython==8.16.1
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+jupyter_client==8.4.0
+jupyter_core==5.4.0
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.8
+numpy==1.26.1
+packaging==23.2
+pandas==2.1.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==10.1.0
+platformdirs==3.11.0
+plotly==5.17.0
+prompt-toolkit==3.0.39
+psutil==5.9.6
+pure-eval==0.2.2
+Pygments==2.16.1
+pyparsing==3.1.1
+pyproj==3.6.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pywin32==306
+pyzmq==25.1.1
+requests==2.31.0
+retrying==1.3.4
+scikit-learn==1.3.1
+scipy==1.11.3
+seaborn==0.13.0
+setuptools==68.2.2
+shapely==2.0.2
+six==1.16.0
+stack-data==0.6.3
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tornado==6.3.3
+traitlets==5.11.2
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.7
+wcwidth==0.2.8
+Werkzeug==2.2.3
+zipp==3.17.0
