--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.6
 comm==0.1.4
-contourpy==1.1.1
+contourpy
 cycler==0.12.1
 dash==2.14.0
 dash-bootstrap-components==1.5.0
@@ -23,6 +23,7 @@ fiona==1.9.5
 Flask==2.2.5
 fonttools==4.43.1
 geopandas==0.14.0
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.8.0
 ipykernel==6.25.2
