--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cligj==0.7.2
 colorama==0.4.6
 comm==0.1.4
 contourpy
-cycler==0.12.1
+cycler
 dash==2.14.0
 dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
