--- a/requirements.txt
+++ b/requirements.txt
@@ -20,22 +20,13 @@ decorator==5.1.1
 executing==2.0.0
 fiona==1.9.5
 Flask==2.2.5
-fonttools==4.43.1
+fonttools
 geopandas==0.14.0
 gunicorn==20.1.0
-idna==3.4
-importlib-metadata==6.8.0
-ipykernel==6.25.2
-ipython==8.16.1
 itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
-jupyter_client==8.4.0
-jupyter_core==5.4.0
-kiwisolver==1.4.5
-MarkupSafe==2.1.3
-nest-asyncio==1.5.8
 numpy==1.26.1
 packaging==23.2
 pandas==2.1.1
