--- a/requirements.txt
+++ b/requirements.txt
@@ -21,19 +21,15 @@ executing==2.0.0
 fiona==1.9.5
 Flask==2.2.5
 fonttools
-geopandas==0.14.0
-gunicorn==20.1.0
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
+geopandas
+gunicorn
+itsdangerous
+jedi
+Jinja2
+joblib
 numpy==1.26.1
 packaging==23.2
 pandas==2.1.1
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==10.1.0
-platformdirs==3.11.0
 plotly==5.17.0
 prompt-toolkit==3.0.39
 psutil==5.9.6
@@ -50,17 +46,3 @@ retrying==1.3.4
 scikit-learn==1.3.1
 scipy==1.11.3
 seaborn==0.13.0
-setuptools==68.2.2
-shapely==2.0.2
-six==1.16.0
-stack-data==0.6.3
-tenacity==8.2.3
-threadpoolctl==3.2.0
-tornado==6.3.3
-traitlets==5.11.2
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.0.7
-wcwidth==0.2.8
-Werkzeug==2.2.3
-zipp==3.17.0
