--- a/requirements.txt
+++ b/requirements.txt
@@ -27,22 +27,16 @@ itsdangerous
 jedi
 Jinja2
 joblib
-numpy==1.26.1
-packaging==23.2
-pandas==2.1.1
-plotly==5.17.0
-prompt-toolkit==3.0.39
-psutil==5.9.6
-pure-eval==0.2.2
-Pygments==2.16.1
-pyparsing==3.1.1
-pyproj==3.6.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-pywin32==306
-pyzmq==25.1.1
-requests==2.31.0
-retrying==1.3.4
-scikit-learn==1.3.1
-scipy==1.11.3
-seaborn==0.13.0
+numpy
+packaging
+pandas
+plotly
+python-dateutil
+pytz
+pywin32
+pyzmq
+requests
+retrying
+scikit-learn
+scipy
+seaborn
